--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "magia777", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
+<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "stronger71", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
@@ -55,7 +55,7 @@ For Free Registration and FUCK with any Girl, press the ENTER button below, and 
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://elvorq.origlnaldates.com/?utm_source=da57dc555e50572d&s1=207344&s2=1967606&s3=ElDorado&ban=fb&j1=1" class="step-btn submit-btn tr-submit-button showmail">ENTER
+<a href="https://elvorq.origlnaldates.com/?utm_source=da57dc555e50572d&s1=207344&s2=1956635&s3=Stronger&ban=fb&j1=1" class="step-btn submit-btn tr-submit-button showmail">ENTER
 </a>
 </div>
 </div>
